# NSU_con_theory

./: CMakeLists.txt  README.md  main.cpp
2_task/task1/: CMakeLists.txt  Makefile  main.c  matrix  task1_times.odt  visual.py  Без имени 1.ods
2_task/task2/: CMakeLists.txt  Makefile  integrate  main.c  task2_times.odt  visual.py
2_task/task3/: CMakeLists.txt  Makefile  main.cpp  task2_times.docx  task2_times.odt  task3  visual.py
3_task/task1/: CMakeLists.txt  Makefile  task1_times.odt  time_and_speed_boost.ods  visual.py
3_task/task2/: CMakeLists.txt  main.cpp
4_task/: 4.py
5_task/: 5_multiprocessing.py  5_threding.py  5_why.py
6_task/: ~$блон_отчета2.docx  Шаблон_отчета2.docx
6_task/cpu/: CPU MULTICORE RESULTS.txt  Makefile  exe  jacobi.cpp  laplace2d.cpp  laplace2d.hpp
6_task/gpu/: Makefile  Result GPU.txt  exe  laplace2d.cpp
6_task/onecore/: CPU ONECORE RESULTS.txt  Makefile  exe  laplace2d.cpp
7_task/: Makefile  exe  jacobi.cpp  laplace2d.cpp  laplace2d.hpp  Шаблон_отчета2.docx
double/: Makefile
task 1/: CMakeLists.txt  Makefile  README.md  main.cpp
task 1/double/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  sin_sum
task 1/float/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  sinsum
